# BraillePaint

./: .gitignore  CMakeLists.txt  bilevel_cvt.c  bilevel_cvt.h  braille_map.h  braille_map_gen.c  config.h  main.c  vcpkg.json
bilevel_cvt/: bilevel_cvt.c  bilevel_cvt.h
sfd/: sfd.c  sfd.h
